--- a/index.css
+++ b/index.css
@@ -1,275 +1,334 @@
-* {
-    padding: 0;
-    margin: 0;
-    box-sizing: inherit;
-}
-
-html {
-    box-sizing: border-box;
-    background: black;
-    font-weight: 200;
-    font-family: 'Roboto', sans-serif;
-    font-size: 68.5%;
-}
-
-body {
-    margin: 0;
-    font-size: 1.2rem;
-}
-
-section {
-    margin-left: 2%;
-    margin-right: 2%;
-    margin-bottom: 4%;
-}
-
-header {
-    text-align: center;
-    height: 80vh;
-    background-image: url(images/imgheader.jpeg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-h1 {
-    color: black;
-    font-size: 4rem;
-}
-
-.headertext>p {
-    color: white;
-    border: 1px solid gold;
-    width: 50px;
-    height: 30px;
-    background: black;
-    text-align: center;
-    margin-right: 2%;
-    margin-top: 2%;
-}
-
-.headertext {
-    align-items: flex-end;
-}
-
-nav {
-    top: 0;
-    width: 100%;
-    transition: all 0.5s;
-    position: relative;
-    z-index: 1;
-}
-
-#main {
-    display: flex;
-    justify-content: space-between;
-    border: 2px solid blanchedalmond;
-}
-
-nav>ul {
-    display: flex;
-    list-style: none;
-    flex: 1;
-    justify-content: center;
-    justify-content: space-between;
-    padding-right: 2%;
-    align-items: center;
-    background: black;
-    font-size: 1.5rem;
-}
-
-nav a {
-    text-decoration: none;
-    color: gold;
-    margin-left: 50px;
-}
-
-li.logo {
-    display: flex;
-    align-items: center;
-}
-
-button {
-    display: inline-block;
-    cursor: pointer;
-    color: gold;
-    padding: 2px 2px;
-    text-decoration: none;
-    width: 100px;
-    background: none;
-    background: black;
-}
-
-button:active {
-    position: relative;
-    top: 1px;
-}
-
-figure>figcaption {
-    color: white;
-    text-align: center;
-    padding-top: 10px;
-    word-spacing: 0.3rem;
-}
-
-img {
-    width: 100%;
-    display: block;
-}
-
-a img {
-    width: 60px;
-    height: 60px;
-}
-
-
-/* contenu */
-
-#contenair {
-    margin: 20px auto;
-    padding: 10px;
-    transform: scale(0.98);
-    transition: transform 0.5s;
-}
-
-#femme {
-    padding-top: 8%;
-    gap: 20px;
-}
-
-#homme {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-}
-
-.produit1 {
-    margin-bottom: 5%;
-}
-
-.produit {
-    display: flex;
-    justify-content: space-between;
-}
-
-.pull {
-    border: 2px solid white;
-}
-
-span {
-    text-decoration: line-through;
-}
-
-span[class] {
-    color: gold;
-    text-decoration: none;
-}
-
-.relative {
-    position: relative;
-}
-
-span[class="absolute"] {
-    position: absolute;
-    color: white;
-    background: gold;
-    left: 22%;
-    top: 80%;
-}
-
-span[class="absolute1"] {
-    position: absolute;
-    color: white;
-    background: gold;
-    right: 2%;
-    top: 80%;
-}
-
-span[class="absolute2"] {
-    position: absolute;
-    color: white;
-    background: gold;
-    left: 59%;
-    top: 80%;
-}
-
-
-/* fixe nav */
-
-.menunav {
-    position: fixed;
-    top: 0;
-    flex: 1;
-}
-
-.menunav li.logo {
-    max-width: 300px;
-}
-
-li.logo {
-    max-width: 0;
-    overflow: hidden;
-    transition: all .5s;
-}
-
-
-/* footer */
-
-.mainfoot {
-    background: white;
-    height: 200px;
-    width: 100%;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    color: black;
-    flex-wrap: wrap;
-}
-
-.mainfoot h3 {
-    margin-top: 0;
-    margin-bottom: 12px;
-    font-weight: bold;
-    font-size: 1.5rem;
-}
-
-.liensutiles ul {
-    list-style: none;
-}
-
-.liensutiles ul a {
-    color: black;
-    text-decoration: none;
-}
-
-.liensutiles ul a:hover {
-    opacity: 2;
-    color: black;
-}
-
-.icons {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-}
-
-.icons a {
-    color: rgba(0, 0, 0, 0.4);
-    font-size: 2em;
-    margin: 10%;
-    cursor: pointer;
-}
-
-.icons a:hover {
-    color: rgba(0, 0, 0, 1);
-}
-
-.mainfoot .copyright {
-    margin-top: 15px;
-    text-align: center;
-    font-size: 13px;
-    color: black;
-    margin-bottom: 0;
-}
+    * {
+        padding: 0;
+        margin: 0;
+        box-sizing: inherit;
+    }
+    
+    html {
+        box-sizing: border-box;
+        background: black;
+        font-weight: 200;
+        font-family: 'Roboto', sans-serif;
+        font-size: 68.5%;
+    }
+    
+    body {
+        margin: 0;
+        font-size: 1.2rem;
+    }
+    
+    section {
+        margin-left: 2%;
+        margin-right: 2%;
+        margin-bottom: 4%;
+    }
+    
+    header {
+        text-align: center;
+        height: 80vh;
+        background-image: url(images/imgheader.jpeg);
+        background-repeat: no-repeat;
+        background-size: cover;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    
+    h1 {
+        color: black;
+        font-size: 4rem;
+    }
+    
+    .headertext>p {
+        color: white;
+        border: 1px solid gold;
+        width: 50px;
+        height: 25px;
+        background: black;
+        text-align: center;
+        position: absolute;
+        bottom: 90%;
+        right: 50px;
+    }
+    
+    nav {
+        top: 0;
+        width: 100%;
+        transition: all 0.5s;
+        position: relative;
+        z-index: 1;
+    }
+    
+    #main {
+        display: flex;
+        justify-content: space-between;
+        border: 2px solid blanchedalmond;
+    }
+    
+    nav>ul {
+        display: flex;
+        list-style: none;
+        flex: 1;
+        justify-content: center;
+        justify-content: space-between;
+        padding-right: 2%;
+        align-items: center;
+        background: black;
+        font-size: 1.5rem;
+    }
+    
+    nav a {
+        text-decoration: none;
+        color: gold;
+        margin-left: 50px;
+    }
+    
+    li.logo {
+        display: flex;
+        align-items: center;
+    }
+    
+    button {
+        display: inline-block;
+        cursor: pointer;
+        color: gold;
+        padding: 2px 2px;
+        text-decoration: none;
+        width: 100px;
+        background: none;
+        background: black;
+        border-style: none;
+        margin-right: 2%;
+        font-size: 1.5rem;
+        font-weight: normal;
+    }
+    
+    button:active {
+        position: relative;
+        top: 1px;
+    }
+    
+    figure>figcaption {
+        color: white;
+        text-align: center;
+        padding-top: 10px;
+        word-spacing: 0.3rem;
+    }
+    
+    img {
+        width: 100%;
+        display: block;
+    }
+    
+    a img {
+        width: 60px;
+        height: 60px;
+    }
+    /* contenu */
+    
+    #contenair {
+        margin: 20px auto;
+        padding: 10px;
+        transform: scale(0.98);
+        transition: transform 0.5s;
+    }
+    
+    #femme {
+        padding-top: 3%;
+        gap: 20px;
+    }
+    
+    #homme {
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+    }
+    
+    .produit1 {
+        margin-bottom: 5%;
+    }
+    
+    .produit {
+        margin-top: 5%;
+        display: flex;
+        justify-content: space-between;
+    }
+    
+    .pull {
+        border: 2px solid white;
+    }
+    
+    span {
+        text-decoration: line-through;
+    }
+    
+    span[class] {
+        color: gold;
+        text-decoration: none;
+    }
+    
+    .relative {
+        position: relative;
+    }
+    
+    span[class="absolute"] {
+        position: absolute;
+        color: white;
+        background: gold;
+        left: 22%;
+        top: 80%;
+    }
+    
+    span[class="absolute1"] {
+        position: absolute;
+        color: white;
+        background: gold;
+        right: 2%;
+        top: 80%;
+    }
+    
+    span[class="absolute2"] {
+        position: absolute;
+        color: white;
+        background: gold;
+        left: 59%;
+        top: 80%;
+    }
+    /* fixe nav */
+    
+    .menunav {
+        position: fixed;
+        top: 0;
+        flex: 1;
+    }
+    
+    .menunav li.logo {
+        max-width: 300px;
+    }
+    
+    li.logo {
+        max-width: 0;
+        overflow: hidden;
+        transition: all .5s;
+    }
+    /* footer */
+    
+    .mainfoot {
+        background: white;
+        height: 200px;
+        width: 100%;
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        color: black;
+        flex-wrap: wrap;
+    }
+    
+    .mainfoot h3 {
+        margin-top: 0;
+        margin-bottom: 12px;
+        font-weight: bold;
+        font-size: 1.5rem;
+    }
+    
+    .liensutiles ul {
+        list-style: none;
+    }
+    
+    .liensutiles ul a {
+        color: black;
+        text-decoration: none;
+    }
+    
+    .liensutiles ul a:hover {
+        opacity: 2;
+        color: black;
+    }
+    
+    .icons {
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+    }
+    
+    .icons a {
+        color: rgba(0, 0, 0, 0.4);
+        font-size: 2em;
+        margin: 10%;
+        cursor: pointer;
+    }
+    
+    .icons a:hover {
+        color: rgba(0, 0, 0, 1);
+    }
+    
+    .mainfoot .copyright {
+        margin-top: 15px;
+        text-align: center;
+        font-size: 13px;
+        color: black;
+        margin-bottom: 0;
+    }
+    /*Bouton Acheter*/
+    
+    .button1 {
+        width: fit-content;
+        height: fit-content;
+        margin-top: 10px;
+        padding-left: 20%;
+    }
+    
+    #buttonLeftMid,
+    #buttonRightMid {
+        padding-left: 0;
+    }
+    
+    .button1 a {
+        display: inline-block;
+        overflow: hidden;
+        position: relative;
+        font-size: 11px;
+        color: rgb(216, 216, 216);
+        text-decoration: none;
+        padding: 10px 15px;
+        border: 1px solid #aaa;
+        font-weight: bold;
+    }
+    
+    .button1 a:after {
+        content: "";
+        position: absolute;
+        top: 0;
+        right: -10px;
+        width: 0%;
+        background: gold;
+        height: 100%;
+        z-index: -1;
+        transition: width 0.3s ease-in-out;
+        transform: skew(-35deg);
+        transform-origin: right;
+    }
+    
+    .button1 a:hover:after {
+        width: 150%;
+        left: -10px;
+        transform-origin: left;
+    }
+    
+    .button1 a:hover {
+        color: rgb(0, 0, 0);
+        transition: all 0.5s ease;
+    }
+    
+    .button1 a:nth-of-type(1) {
+        border-radius: 50px 0 0 50px;
+        border-right: none;
+    }
+    
+    .button1 a:nth-of-type(2) {
+        border-radius: 0px 50px 50px 0;
+    }
+    
+    .cart-icon {
+        padding-right: 8px;
+    }
