--- a/index3.css
+++ b/index3.css
@@ -10,6 +10,7 @@ html {
     font-weight: 200;
     font-family: 'Roboto', sans-serif;
     font-size: 68.5%;
+    color: white;
 }
 
 body {
@@ -17,6 +18,50 @@ body {
     font-size: 1.2rem;
 }
 
-.marque {
+.menu {
     display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-right: 2%;
+    padding-left: 2%;
+}
+
+hr {
+    width: 250px;
+    display: flex;
+    align-self: center;
+}
+
+.contact {
+    display: flex;
+    text-align: center;
+    flex-direction: column;
+    gap: 15px
+}
+
+input {
+    width: 250px;
+    display: flex;
+    align-self: center;
+}
+
+h1 {
+    font-size: 2rem;
+}
+
+.contact .motdepasse {
+    font-size: 1rem;
+}
+
+.para {
+    border: 1px solid white;
+    width: 250px;
+    display: flex;
+    align-self: center;
+    background: white;
+    color: black;
+}
+
+.defaultbutton {
+    color: white;
 }
