--- a/index2.css
+++ b/index2.css
@@ -34,6 +34,18 @@ header {
     justify-content: center;
 }
 
+.headertext>p {
+    color: white;
+    border: 1px solid gold;
+    width: 50px;
+    height: 25px;
+    background: black;
+    text-align: center;
+    position: absolute;
+    bottom: 90%;
+    right: 50px;
+}
+
 nav {
     top: 0;
     width: 100%;
@@ -81,6 +93,9 @@ button {
     width: 100px;
     background: none;
     background: black;
+    margin-right: 2%;
+    font-size: 1.5rem;
+    font-weight: normal;
 }
 
 button:active {
