--- a/index3.css
+++ b/index3.css
@@ -24,6 +24,7 @@ body {
     align-items: center;
     padding-right: 2%;
     padding-left: 2%;
+    margin-top: 2%;
 }
 
 hr {
@@ -36,7 +37,8 @@ hr {
     display: flex;
     text-align: center;
     flex-direction: column;
-    gap: 15px
+    gap: 15px;
+    margin-bottom: 2%;
 }
 
 input {
@@ -49,8 +51,13 @@ h1 {
     font-size: 2rem;
 }
 
-.contact .motdepasse {
+.Contact .motdepasse {
     font-size: 1rem;
+}
+
+.motdepasse>a {
+    text-decoration: none;
+    color: white;
 }
 
 .para {
@@ -64,4 +71,33 @@ h1 {
 
 .defaultbutton {
     color: white;
+}
+
+button>a {
+    text-decoration: none;
+    color: black;
+    font-size: 1rem;
+}
+
+.panier {
+    text-decoration: none;
+    color: white;
+    font-size: 1.2rem;
+}
+
+button {
+    display: flex;
+    justify-content: center;
+    width: 250px;
+}
+
+.recherche {
+    display: flex;
+    flex-direction: column;
+    line-height: 20px;
+}
+
+div>.recherche>a>img {
+    width: 15px;
+    height: 15px;
 }
