--- a/index2.css
+++ b/index2.css
@@ -96,21 +96,6 @@ li.logo {
     border: 2px solid blanchedalmond;
 }
 
-button {
-    display: inline-block;
-    cursor: pointer;
-    color: gold;
-    padding: 2px 2px;
-    text-decoration: none;
-    width: 100px;
-    background: none;
-    background: black;
-    border-style: none;
-    margin-right: 2%;
-    font-size: 1.5rem;
-    font-weight: normal;
-}
-
 button:active {
     position: relative;
     top: 1px;
@@ -221,7 +206,6 @@ input[ type="submit"] {
 .site-wrap {
     color: white;
     padding: 40px;
-    text-align: justify;
     line-height: 28px;
     margin: 20px auto;
     padding: 10px;
@@ -239,7 +223,7 @@ input[ type="submit"] {
 
 /* equipe */
 
-#photo {
+.photo {
     vertical-align: middle;
     width: 50px;
     height: 50px;
