--- a/index3.css
+++ b/index3.css
@@ -67,28 +67,20 @@ h1 {
     align-self: center;
     background: white;
     color: black;
+    text-decoration: none;
+    font-size: 1rem;
+    justify-content: center;
+    font-weight: bold;
 }
 
 .defaultbutton {
     color: white;
 }
 
-button>a {
-    text-decoration: none;
-    color: black;
-    font-size: 1rem;
-}
-
 .panier {
     text-decoration: none;
     color: white;
     font-size: 1.2rem;
-}
-
-button {
-    display: flex;
-    justify-content: center;
-    width: 250px;
 }
 
 .recherche {
